<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Weather app</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="pressure">Pressure</string>
    <string name="precip_today_in">Preciptation Today</string>



</resources>
